fixed z-index on footer, and removed red "errors" on login and register
problem was the inputfields had required which made them red on load as they werent filled

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,14 +9,14 @@ footer{
 	bottom: 0;
 	width: 100%;
 	box-sizing: border-box;
-	z-index: 150;
+	z-index: 1;
 }
 
 #notifyUser{
 	position: absolute;
 	bottom: 2em;
 	right: 2em;
-	z-index: 10;
+	z-index: 100;
 	background-color: #fff;
 }
 
